add takeproduct
